<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/gambar_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/gambarku"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="openAddress"
                    android:text="@string/alamat" />

                <Button
                    android:id="@+id/Telepon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="openPhone"
                    android:text="@string/telepon" />

                <Button
                    android:id="@+id/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="openEmail"
                    android:text="@string/email" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>